# conways-supercomputer

./: CMakeLists.txt  README.md
include/: conways_game_of_life.h  parallel_game_of_life.h  utils.h
src/: conways_game_of_life.c  main.c  parallel_game_of_life.c  utils.c
